1차 디자인 커밋

--- a/src/main/resources/static/css/commonui.css
+++ b/src/main/resources/static/css/commonui.css
@@ -1,9 +1,9 @@
 @charset "UTF-8";
 
-body{
-	padding-top:70px;
-	padding-bottom:30px;
-}
+/* body{ */
+/* 	padding-top:70px; */
+/* 	padding-bottom:30px; */
+/* } */
 
 .board_title{
 	font-weight : 700;
